feat(agent): agent-native tool loop, replacing plan-subsystem tool path (#91)
The plan subsystem's ToolCallStepHandler is the only way agents can execute tools today, coupling tool use to the planning role. This introduces a direct ToolCapable/ToolSession protocol so any agent can request tools natively – a prerequisite for removing the plan subsystem entirely.

Agents that declare tools now enter a bounded loop driven by ToolLoopRunner: the sealed AgentResponse hierarchy (TextResponse, ToolRequest, Error) controls flow with no explicit "done" signal. Budget exhaustion gives the agent one final call to summarize before hard failure. Action.Send gains a rawPayload flag to prevent template-exfiltration of LLM-generated tool arguments.

#88 PR 4/5

Signed-off-by: Aleksandr Suvorov <asuvorov@hensu.io>